--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -8,8 +8,7 @@
       <div class="logo">
         <div class="logo-diamond">◆</div>
         <div class="logo-text">
-          <h1>Timeline</h1>
-          <p>Parallel History</p>
+          <h1>Parallel Past</h1>
         </div>
       </div>
     </div>
